--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node-telegram-bot-api": "^0.30.0",
+    "axios": "^0.18.0",
     "telebot": "^1.2.6"
   }
 }
